delivery option updated

--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -209,3 +209,14 @@
   margin-top: 11px;
   margin-bottom: 15px;
 }
+.quantity-edit-container{
+  display: block;
+  width: 30px;
+  display: none;
+
+
+}
+.quantity-input{
+  width: 30px;
+}
+
